objects/SF_Credit_Memo__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Deal__r.ContactAccount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertiser__c</fullName>
        <formula>Deal__r.Advertiser__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advertiser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>At_Fault__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>At Fault</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SF_Credit_Memos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Deal__r.Brands__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>SF Credit Memos</relationshipLabel>
        <relationshipName>SF_Credit_Memos</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Double_Check__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Double check was missed by the user linked to this field</inlineHelpText>
        <label>Double Check</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SF_Credit_Memos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ERROR_REASON__c</fullName>
        <inlineHelpText>Populate this field if the SFCM was created due to MVMS error.</inlineHelpText>
        <label>ERROR REASON</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Booked with no Order</fullName>
                </value>
                <value>
                    <fullName>Cancellation not Entered</fullName>
                </value>
                <value>
                    <fullName>Incorrect Break Entered</fullName>
                </value>
                <value>
                    <fullName>Incorrect Cable Day-part</fullName>
                </value>
                <value>
                    <fullName>Incorrect Days Allowed Selected</fullName>
                </value>
                <value>
                    <fullName>Incorrect Spot Separation</fullName>
                </value>
                <value>
                    <fullName>Incorrect Times Selected</fullName>
                </value>
                <value>
                    <fullName>Post Log Error</fullName>
                </value>
                <value>
                    <fullName>Pre Log Error</fullName>
                </value>
                <value>
                    <fullName>Ran Out of Rotation</fullName>
                </value>
                <value>
                    <fullName>Weekly Recon Processed Incorrectly</fullName>
                </value>
                <value>
                    <fullName>Wrong ISCI Code / 800#</fullName>
                </value>
                <value>
                    <fullName>Wrong Length</fullName>
                </value>
                <value>
                    <fullName>Wrong Rate</fullName>
                </value>
                <value>
                    <fullName>Wrong Traffic (incl. Incorrect Traffic Instructions)</fullName>
                </value>
                <value>
                    <fullName>Wrong Units Available</fullName>
                </value>
                <value>
                    <fullName>Wrong Week Selected</fullName>
                </value>
                <value>
                    <fullName>Hiatus Missed</fullName>
                </value>
                <value>
                    <fullName>Incorrect Amount of Units</fullName>
                </value>
                <value>
                    <fullName>Order Entered Incorrectly</fullName>
                </value>
                <value>
                    <fullName>Revision Missed (Not Entered)</fullName>
                </value>
                <value>
                    <fullName>Incorrect LTC (Add&apos;t Units Ran)</fullName>
                </value>
                <value>
                    <fullName>NOT MVMS Fault - Approved by Management to absorb</fullName>
                </value>
                <value>
                    <fullName>Aired in restricted programming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Caused_By__c</fullName>
        <label>Error Caused By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Marathon Ventures</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finance_Comments__c</fullName>
        <label>Finance Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Intacct_CM__c</fullName>
        <label>Intacct CM</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Deal__r.Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Assistance_Comments__c</fullName>
        <label>Request Assistance Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Assistance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Assistance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_Credit_Memo_Total__c</fullName>
        <label>SF Credit Memo Total</label>
        <summarizedField>SF_Credit_Memo_Detail__c.Credit_Amount__c</summarizedField>
        <summaryForeignKey>SF_Credit_Memo_Detail__c.SF_Credit_Memo_Detail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved by Finance</fullName>
                </value>
                <value>
                    <fullName>Approved by Op&apos;s Task Force</fullName>
                </value>
                <value>
                    <fullName>Approved by Upper Management</fullName>
                </value>
                <value>
                    <fullName>Approved by Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Force_Comments__c</fullName>
        <label>Task Force Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agency Discount</fullName>
                </value>
                <value>
                    <fullName>Agency Discount - Approved by Network</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Credit - Approved by Network</fullName>
                </value>
                <value>
                    <fullName>Network Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SF Credit Memo</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Deal__c</columns>
        <columns>Account__c</columns>
        <columns>Brand__c</columns>
        <columns>Program__c</columns>
        <columns>SF_Credit_Memo_Total__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>yogita</value>
        </filters>
        <label>Yogita Telhu</label>
    </listViews>
    <listViews>
        <fullName>All_Jill</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Deal__c</columns>
        <columns>Account__c</columns>
        <columns>Brand__c</columns>
        <columns>Program__c</columns>
        <columns>SF_Credit_Memo_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>yogita</value>
        </filters>
        <label>All - Jill</label>
    </listViews>
    <nameField>
        <displayFormat>SFCM-{00000}</displayFormat>
        <label>SF Credit Memo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SF Credit Memos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>At_Fault_Review</fullName>
        <active>true</active>
        <description>If SFCM type equals &apos;Credit&apos;, record must identify who caused the error (MV, Network)</description>
        <errorConditionFormula>AND(OR( ISPICKVAL( Type__c , &quot;Credit - Approved by Network&quot;), ISPICKVAL(Type__c, &quot;Credit&quot;)), ISPICKVAL( Error_Caused_By__c , &quot;&quot;))</errorConditionFormula>
        <errorMessage>If SFCM Type = Credit, Please populate the &apos;Error Caused By&apos; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Double_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(),ISBLANK(Double_Check__c))</errorConditionFormula>
        <errorMessage>Please populate Double Check field with appropriate MVMS Team Member.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_Enter_Comments</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Comments__c )</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Please add an explanation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SFCM_Complete</fullName>
        <active>false</active>
        <description>This rule will ensure that no changes are made to any SFCM that has been processed and is considered &quot;complete&quot;.</description>
        <errorConditionFormula>Complete__c = True</errorConditionFormula>
        <errorMessage>This SFCM has been processed and marked off as complete by Finance. Please consult with Finance before making any changes. All changes must be approved by Finance.</errorMessage>
    </validationRules>
</CustomObject>